RESOLVED FIXED188463
Incorrect log message in NetworkSession when creating NetworkDataTask
https://bugs.webkit.org/show_bug.cgi?id=188463
Summary Incorrect log message in NetworkSession when creating NetworkDataTask
Sihui Liu
Reported 2018-08-09 17:55:55 PDT
It is claimed to "Creating stateless NetworkDataTask" when it's not.
Attachments
Patch (2.34 KB, patch)
2018-08-09 17:58 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2018-08-09 17:58:19 PDT
WebKit Commit Bot
Comment 2 2018-08-10 09:46:03 PDT
Comment on attachment 346882 [details] Patch Clearing flags on attachment: 346882 Committed r234759: <https://trac.webkit.org/changeset/234759>
WebKit Commit Bot
Comment 3 2018-08-10 09:46:05 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-08-10 09:47:19 PDT
Note You need to log in before you can comment on or make changes to this bug.